--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "classnames": "^2.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.1",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -38,9 +39,11 @@
     ]
   },
   "devDependencies": {
+    "@types/jest": "^28.1.2",
     "@types/node": "^18.0.0",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
+    "@types/sass": "^1.43.1",
     "babel-eslint": "^10.1.0",
     "babel-plugin-named-exports-order": "^0.0.2",
     "eslint": "^8.18.0",
@@ -59,7 +62,7 @@
     "postcss-scss": "^4.0.4",
     "prettier": "^2.7.1",
     "sass": "^1.52.3",
-    "sass-loader": "^13.0.0",
+    "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
     "stylelint": "^14.9.1",
     "stylelint-config-recess-order": "^3.0.0",
