--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "classnames": "^2.3.1",
+    "dotenv": "^16.0.1",
+    "mapbox-gl": "^2.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-map-gl": "^7.0.16",
     "react-query": "^3.39.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
+    "recoil": "^0.7.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -39,7 +43,9 @@
     ]
   },
   "devDependencies": {
+    "@types/dotenv": "^8.2.0",
     "@types/jest": "^28.1.2",
+    "@types/mapbox-gl": "^2.7.3",
     "@types/node": "^18.0.0",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
