--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/react-js-pagination": "^3.0.4",
     "classnames": "^2.3.1",
     "dotenv": "^16.0.1",
     "mapbox-gl": "^2.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-js-pagination": "^3.0.3",
     "react-map-gl": "^7.0.16",
     "react-query": "^3.39.1",
     "react-router-dom": "^6.3.0",
