--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/react-js-pagination": "^3.0.4",
+    "@types/react-slick": "^0.23.9",
     "classnames": "^2.3.1",
     "dotenv": "^16.0.1",
     "mapbox-gl": "^2.9.0",
@@ -17,7 +18,9 @@
     "react-query": "^3.39.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
+    "react-slick": "^0.29.0",
     "recoil": "^0.7.3",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
