--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "mapbox-gl": "^2.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-indiana-drag-scroll": "^2.2.0",
     "react-js-pagination": "^3.0.3",
     "react-map-gl": "^7.0.16",
     "react-router-dom": "^6.3.0",
